# SparePartsInventory

./: .gitattributes  .gitignore  RAILWAY_PLATFORM_README.md  RELEASE_NOTES_v1.0.md  STEP17_AUDIT_TRAIL.json  _build_stock_summary.py  _final_audit.py  _modernization_audit.py  _platform_modernization.py  _step19_regenerate.py  _step21a_run.py  _step22_run.py  _step23_5_audit.py  _step23_6a_audit.py  _step23_6b_run.py  _step23_7_run.py  _step23_8_audit.py  _step23_run.py  _step24_run.py  _step25_5_audit.py  _step25_run.py  _step26_run.py  _step27_audit.py  _step28_audit.py  _step30_build_notebooks.py  _step30_csvs.py  _step31_csvs.py  _step32_audit.py  _step33_phaseA.py  _step33_phaseBC.py  _step33_phaseD.py  pyproject.toml  requirements-notebooks.txt  requirements.txt
Power-BI Dashboards/: Railway.pbix
docs/: REGRESSION_GOVERNANCE.md
notebooks/: notebook_railway.ipynb  notebook_railway_executive.ipynb  notebook_railway_technical.ipynb
railway/: ANYLOGISTIX_READINESS_REPORT.md  __init__.py  performance_test.py  railway_anylogistix_export.py  railway_audit_trail.py  railway_business_unit_config.py  railway_business_unit_runner.py  railway_classification.py  railway_config.py  railway_context.py  railway_dashboard_validation.py  railway_data_preparation.py  railway_data_quality.py  railway_demand_classification.py  railway_demand_reconstruction.py  railway_domain_config.py  railway_enterprise.py  railway_executive_summary.py  railway_explainability.py  railway_forecast_generation.py  railway_forecasting.py  railway_inventory_optimization.py  railway_lineage.py  (+14 more)
(+679 files in other folders)
